// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative ./protofile.proto
syntax = "proto3";

package pricepb;

option go_package = "github.com/ArtemShamro/Go_Booking/;pb";

service MessengerServer {
  rpc askPrice(AskRequest) returns (AskResponse);
}

message AskRequest {
  string hotel = 1;
}

message AskResponse {
  int32 price = 1;
}